--- a/schematics30day/sample03/hello-world/package.json
+++ b/schematics30day/sample03/hello-world/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@angular-devkit/core": "^13.1.2",
     "@angular-devkit/schematics": "^13.1.2",
+    "@schematics/angular": "^13.3.7",
+    "dts-generator": "^3.0.0",
     "typescript": "~4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
     "jasmine": "^3.5.0"
   }
 }
