--- a/ngAddDemo/src/ng-add/files/app.component.ts.template
+++ b/ngAddDemo/src/ng-add/files/app.component.ts.template
@@ -3,8 +3,8 @@ import { Component } from '@angular/core';
 @Component({
   selector: 'app-root',
   templateUrl: './app.component.html',
-  styleUrls: ['./app.component.less']
+  styleUrls: ['./app.component.scss']
 })
 export class AppComponent {
-  title = 'testDemo';
+  title = <% if (defaultLanguage === 'zh-cn') { %>'你好'<% } else { %>'Hello'<% } %>;
 }
